MSITE-203 fix z-index dropdown kit

--- a/web/css/modules/order/orderCol/orderCol.less
+++ b/web/css/modules/order/orderCol/orderCol.less
@@ -370,6 +370,7 @@
     display: none;
 }
 
-.box-show {
+.box-show{
     display: block;
+    z-index: 1;
 }
